kubernetes/bootstrap/cozy-nfs-driver-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cozy-nfs-driver
  labels:
    app.kubernetes.io/name: cozy-nfs-driver
